tests/valid/trait/assoc_projection_normalizes.facet
trait Iterator {
  type Item;
}

impl Iterator for unrestricted isize {
  type Item = isize;
}

fn main() -> unrestricted <unrestricted isize as Iterator>::Item {
  1
}
