tests/invalid/module/unknown_qualified_struct_literal.facet
fn main() -> unrestricted () {
  missing::pkg::Box { value = 1 };
  ()
}
